[gd_scene load_steps=9 format=3 uid="uid://c5uv6jd01icmt"]

[ext_resource type="PackedScene" uid="uid://cwybaemylrmun" path="res://addons/lightning/baked/Lightning3D.tscn" id="1"]
[ext_resource type="Script" path="res://addons/lightning/baked/test.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://h41bbuw4c71r" path="res://addons/lightning/generators/Lightning3DBranched.tscn" id="3"]

[sub_resource type="Curve3D" id="Curve3D_ea111"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 2.84172, -3.53472, 0.757536, 0, 0, 0, 0, 0, 0, 6.61138, -0.989723, -11.2751, 0, 0, 0, 0, 0, 0, 2.01082, 5.29422, -13.5134, 0, 0, 0, 0, 0, 0, -1.8596, 2.68638, -1.16852, 0, 0, 0, 0, 0, 0, 2.84172, -3.53472, 0.757536),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="PlaneMesh" id="PlaneMesh_5juxs"]
size = Vector2(0.6, 12.8636)

[sub_resource type="PlaneMesh" id="PlaneMesh_5ulc7"]
size = Vector2(0.6, 8.10328)

[sub_resource type="PlaneMesh" id="PlaneMesh_4uund"]
size = Vector2(0.6, 13.1976)

[sub_resource type="PlaneMesh" id="PlaneMesh_6gxvu"]
size = Vector2(0.6, 8.03207)

[node name="Node3D" type="Node3D"]
script = ExtResource("2")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.199351, -0.415174, 0.887632, 0, 0.905813, 0.423678, -0.979928, -0.0844605, 0.180575, 26.7157, 15.0899, 8.07141)

[node name="Lightning3D" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.18489, 0, -8.75149)
curve = SubResource("Curve3D_ea111")
meshs = [SubResource("PlaneMesh_5juxs"), SubResource("PlaneMesh_5ulc7"), SubResource("PlaneMesh_4uund"), SubResource("PlaneMesh_6gxvu")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CheckButton" type="CheckButton" parent="CanvasLayer"]
offset_right = 76.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_top = 40.0
offset_right = 128.0
offset_bottom = 232.0

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Instantiate Lightning3D"

[node name="AddButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Add 10"

[node name="AddButton2" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Add 100"

[node name="AddButton3" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Add 1000"

[node name="AddButton4" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Add 10 000"

[node name="Lightning3DBranched" parent="." instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, -0.119894, -0.992787, 0, 0.992787, -0.119894, 0, 0, -6.38788)

[connection signal="toggled" from="CanvasLayer/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/AddButton" to="." method="_on_add_button_pressed" binds= [10]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/AddButton2" to="." method="_on_add_button_pressed" binds= [100]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/AddButton3" to="." method="_on_add_button_pressed" binds= [1000]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/AddButton4" to="." method="_on_add_button_pressed" binds= [10000]]
